test/errors/parsing/top_level_use_not_implemented_error.hy
// EXPECT_OUTPUT: use statements not yet implemented in code generation

use List
use Map
use Set

int main()
{
    assert true
    return 0
}
